5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1595_2894.log
== TEST (2019-03-21 17:05:57) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45

# Impressao do valor total:
print(total)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:06:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45

# Impressao do valor total:
print(total)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:09:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45

# Impressao do valor total:
print(total)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:34:27) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45

# Impressao do valor total:
print(total)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:34:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.208441
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:37:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = Qual o valor unitario do jogo?+45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = Qual o valor unitario do jogo?+45
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:37:12) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45

# Impressao do valor total:
print(total)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:38:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (var+45)

# Impressao do valor total:
print(total)

-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:38:35) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (var+45)

# Impressao do valor total:
print(total)

-- EXECUTION TIME:
0.195568
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:15:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (var+(45*8))

# Impressao do valor total:
print(total)

-- OUTPUT:
361.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:15:30) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (var+(45*8))

# Impressao do valor total:
print(total)

-- EXECUTION TIME:
0.127163
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
361.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
716.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124347.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:15:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (var+45*)

# Impressao do valor total:
print(total)

-- ERROR:
File "XXXX", line 8
    total = (var+45*)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:16:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (var+45)

# Impressao do valor total:
print(total)

-- EXECUTION TIME:
0.18711
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:21:24) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))
var2 = float(input("Qual o valor unitario do jogo 2? "))
var 3 = float(input("Qual o valor unitario do jogo 3? "))
var4 = float(input("Qual o valor unitario do jogo 4? "))
var5 = float(input("Qual o valor unitario do jogo 5? "))
var6 = float(input("Qual o valor unitario do jogo 6? "))
var7 = float(input("Qual o valor unitario do jogo 7? "))
var8 = float(input("Qual o valor unitario do jogo 8? "))



# Calculo do valor a ser pago, incluindo o frete:
total = (var1+var2+var3+var4+var5+var6+var7+var8*(45))


# Impressao do valor total:
print(total)

-- ERROR:
File "XXXX", line 7
    var 3 = float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:21:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))
var2 = float(input("Qual o valor unitario do jogo 2? "))
var3 = float(input("Qual o valor unitario do jogo 3? "))
var4 = float(input("Qual o valor unitario do jogo 4? "))
var5 = float(input("Qual o valor unitario do jogo 5? "))
var6 = float(input("Qual o valor unitario do jogo 6? "))
var7 = float(input("Qual o valor unitario do jogo 7? "))
var8 = float(input("Qual o valor unitario do jogo 8? "))



# Calculo do valor a ser pago, incluindo o frete:
total = (var1+var2+var3+var4+var5+var6+var7+var8*(45))


# Impressao do valor total:
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:22:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))
var2 = float(input("Qual o valor unitario do jogo 2? "))
var3 = float(input("Qual o valor unitario do jogo 3? "))
var4 = float(input("Qual o valor unitario do jogo 4? "))
var5 = float(input("Qual o valor unitario do jogo 5? "))
var6 = float(input("Qual o valor unitario do jogo 6? "))
var7 = float(input("Qual o valor unitario do jogo 7? "))
var8 = float(input("Qual o valor unitario do jogo 8? "))



# Calculo do valor a ser pago, incluindo o frete:
total = (var1+var2+var3+var4+var5+var6+var7+var8*(45))


# Impressao do valor total:
print(total)

-- EXECUTION TIME:
0.169441
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:23:05) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))
var2 = float(input("Qual o valor unitario do jogo 2? "))
var3 = float(input("Qual o valor unitario do jogo 3? "))
var4 = float(input("Qual o valor unitario do jogo 4? "))
var5 = float(input("Qual o valor unitario do jogo 5? "))
var6 = float(input("Qual o valor unitario do jogo 6? "))
var7 = float(input("Qual o valor unitario do jogo 7? "))
var8 = float(input("Qual o valor unitario do jogo 8? "))



# Calculo do valor a ser pago, incluindo o frete:
total = ((var1+var2+var3+var4+var5+var6+var7+var8)*(45))


# Impressao do valor total:
print(total)

-- EXECUTION TIME:
0.207039
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:23:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))
var2 = float(input("Qual o valor unitario do jogo 2? "))
var3 = float(input("Qual o valor unitario do jogo 3? "))
var4 = float(input("Qual o valor unitario do jogo 4? "))
var5 = float(input("Qual o valor unitario do jogo 5? "))
var6 = float(input("Qual o valor unitario do jogo 6? "))
var7 = float(input("Qual o valor unitario do jogo 7? "))
var8 = float(input("Qual o valor unitario do jogo 8? "))



# Calculo do valor a ser pago, incluindo o frete:
total = ((var1+var2+var3+var4+var5+var6+var7+var8)*(45))


# Impressao do valor total:
print(total)

-- EXECUTION TIME:
0.178079
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:23:28) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))
var2 = float(input("Qual o valor unitario do jogo 2? "))
var3 = float(input("Qual o valor unitario do jogo 3? "))
var4 = float(input("Qual o valor unitario do jogo 4? "))
var5 = float(input("Qual o valor unitario do jogo 5? "))
var6 = float(input("Qual o valor unitario do jogo 6? "))
var7 = float(input("Qual o valor unitario do jogo 7? "))
var8 = float(input("Qual o valor unitario do jogo 8? "))



# Calculo do valor a ser pago, incluindo o frete:
total = ((var1+var2+var3+var4+var5+var6+var7+var8)+(45))


# Impressao do valor total:
print(total)

-- EXECUTION TIME:
0.167724
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:23:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))
var2 = float(input("Qual o valor unitario do jogo 2? "))
var3 = float(input("Qual o valor unitario do jogo 3? "))
var4 = float(input("Qual o valor unitario do jogo 4? "))
var5 = float(input("Qual o valor unitario do jogo 5? "))
var6 = float(input("Qual o valor unitario do jogo 6? "))
var7 = float(input("Qual o valor unitario do jogo 7? "))
var8 = float(input("Qual o valor unitario do jogo 8? "))



# Calculo do valor a ser pago, incluindo o frete:
total = ((var1+var2+var3+var4+var5+var6+var7+var8)+(45))


# Impressao do valor total:
print(total)

-- EXECUTION TIME:
0.149666
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:23:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))
var2 = float(input("Qual o valor unitario do jogo 2? "))
var3 = float(input("Qual o valor unitario do jogo 3? "))
var4 = float(input("Qual o valor unitario do jogo 4? "))
var5 = float(input("Qual o valor unitario do jogo 5? "))
var6 = float(input("Qual o valor unitario do jogo 6? "))
var7 = float(input("Qual o valor unitario do jogo 7? "))
var8 = float(input("Qual o valor unitario do jogo 8? "))



# Calculo do valor a ser pago, incluindo o frete:
total = ((var1+var2+var3+var4+var5+var6+var7+var8)+(45))


# Impressao do valor total:
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:23:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))
var2 = float(input("Qual o valor unitario do jogo 2? "))
var3 = float(input("Qual o valor unitario do jogo 3? "))
var4 = float(input("Qual o valor unitario do jogo 4? "))
var5 = float(input("Qual o valor unitario do jogo 5? "))
var6 = float(input("Qual o valor unitario do jogo 6? "))
var7 = float(input("Qual o valor unitario do jogo 7? "))
var8 = float(input("Qual o valor unitario do jogo 8? "))



# Calculo do valor a ser pago, incluindo o frete:
total = ((var1+var2+var3+var4+var5+var6+var7+var8)+(45))


# Impressao do valor total:
print(total)

-- EXECUTION TIME:
0.174744
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:32:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))
var2 = float(input("Qual o valor unitario do jogo 2? "))
var3 = float(input("Qual o valor unitario do jogo 3? "))
var4 = float(input("Qual o valor unitario do jogo 4? "))
var5 = float(input("Qual o valor unitario do jogo 5? "))
var6 = float(input("Qual o valor unitario do jogo 6? "))
var7 = float(input("Qual o valor unitario do jogo 7? "))
var8 = float(input("Qual o valor unitario do jogo 8? "))



# Calculo do valor a ser pago, incluindo o frete:
total = ((var1+var2+var3+var4+var5+var6+var7+var8)*45)


# Impressao do valor total:
print(total)

-- EXECUTION TIME:
0.152961
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:32:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))
var2 = float(input("Qual o valor unitario do jogo 2? "))
var3 = float(input("Qual o valor unitario do jogo 3? "))
var4 = float(input("Qual o valor unitario do jogo 4? "))
var5 = float(input("Qual o valor unitario do jogo 5? "))
var6 = float(input("Qual o valor unitario do jogo 6? "))
var7 = float(input("Qual o valor unitario do jogo 7? "))
var8 = float(input("Qual o valor unitario do jogo 8? "))



# Calculo do valor a ser pago, incluindo o frete:
total = ((var1+var2+var3+var4+var5+var6+var7+var8)*45)


# Impressao do valor total:
print(total)

-- EXECUTION TIME:
0.148023
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 03:44:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))
var2 = float(input("Qual o valor unitario do jogo 2? "))
var3 = float(input("Qual o valor unitario do jogo 3? "))
var4 = float(input("Qual o valor unitario do jogo 4? "))
var5 = float(input("Qual o valor unitario do jogo 5? "))
var6 = float(input("Qual o valor unitario do jogo 6? "))
var7 = float(input("Qual o valor unitario do jogo 7? "))
var8 = float(input("Qual o valor unitario do jogo 8? "))



# Calculo do valor a ser pago, incluindo o frete:
total = ((var1+var2+var3+var4+var5+var6+var7+var8)+45)


# Impressao do valor total:
print(total)

-- EXECUTION TIME:
0.180537
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 6, in <module>
    var2 = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:30:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))




# Calculo do valor a ser pago, incluindo o frete:
total = (var1+45)


# Impressao do valor total:
print(total)

-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:31:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))




# Calculo do valor a ser pago, incluindo o frete:
total = ((var1*8)+45)


# Impressao do valor total:
print(total)

-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 13:31:35) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var1 = float(input("Qual o valor unitario do jogo 1? "))




# Calculo do valor a ser pago, incluindo o frete:
total = ((var1*8)+45)


# Impressao do valor total:
print(total)

-- EXECUTION TIME:
0.210254
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
